# ONNX_DEV

./: .gitignore  README.md
ops/: CMakeLists.txt  custom_op_library.cc
ops/cpu/: CMakeLists.txt  custom_op_library.cc  custom_op_library.h
ops/cpu/include/: custom_ops.h
ops/cpu/src/: custom_ops.cc
ops/cuda/: CMakeLists.txt  custom_op_library.cc
ops/cuda/include/: custom_ops.h  gelu_kernel.h
ops/cuda/kernels/: gelu_kernel.cu
ops/cuda/src/: custom_ops.cc
ops/include/: custom_ops.h
ops/src/: custom_ops.cc  entry_point.cc
src/: compare_models.py  conv_model.py  custom_model.py  custom_ops.py  custom_ops_model.py  export_gpt2.py  infer_gpt.ipynb  infer_gpt.py  infer_gpt_cpu.py  infer_gpt_cuda.py  torch_custom_sym.py  trace_graph.py
src/models/: custom_identity_model.onnx  custom_matmul.onnx  custom_matmul_relu.onnx  custom_op_model.onnx  dense_net.onnx  dense_net_custom_op.onnx  example_model.onnx  inverse_model.onnx
